--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,16 @@
 @import '~bootstrap/scss/bootstrap';
+
+div {
+  border: 1px solid black;
+  margin: 5px;
+}
+
+.success {
+  color: blue;
+  padding: 20px;
+}
+
+.failure {
+  color: orange;
+  padding: 20px;
+}
