Finish CREATE new game, add click handler Added CREATE new game API call, added click handler for clicked board divs (currently x only), started UPDATE game API call to be completed when board is fully JS tracked

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,6 +5,10 @@ div {
   margin: 5px;
 }
 
+.atop {
+  height: 70px;
+}
+
 .box {
   align-items: center;
   border: 1px solid black;
@@ -16,10 +20,12 @@ div {
 
 .failure {
   color: orange;
+}
+
+.messages {
   padding: 20px;
 }
 
 .success {
   color: blue;
-  padding: 20px;
 }
